# mcp4xray

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  servers.json
dev/: mock_server.py
docs/superpowers/plans/: 2026-03-10-mcp4xray-web-frontend.md
docs/superpowers/specs/: 2026-03-10-mcp4xray-web-frontend-design.md
laiss_hack/: Dockerfile
src/mcp4xray/: app.py  auth.py  chat.py  config.py  db.py  llm.py  main.py  mcp_client.py
src/mcp4xray/routes/: admin_routes.py  auth_routes.py  chat_routes.py  config_routes.py  conversation_routes.py  settings_routes.py
src/mcp4xray/static/: admin.css  admin.html  admin.js  app.js  auth.js  index.html  login.html  style.css
tests/: test_admin_routes.py  test_auth.py  test_auth_routes.py  test_chat.py  test_chat_routes.py  test_config.py  test_conversation_routes.py  test_db.py  test_llm.py  test_mcp_client.py
