[project]
name = "mcp4xray"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "mcp>=1.0",
    "PyJWT>=2.9",
    "bcrypt>=4.2",
    "aiosqlite>=0.20",
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
